# arborium

./: .dockerignore  .envrc  .gitignore  ADDING_GRAMMARS.md  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOP.md  Dockerfile.ci  HANDOFF.md  PUBLISH.md  README.md  README.template.md  clippy.toml  compression.kdl  justfile  knope.toml  plugin-timings.json
.config/captain/: config.kdl
.github/docker/: Dockerfile.plugin-builder
.github/workflows/: ci.yml  release.yml
component-demo/: host-demo.html
component-demo/host/: arborium_host.core.wasm  arborium_host.core3.wasm  arborium_host.core4.wasm  arborium_host.d.ts  arborium_host.js
crates/arborium/: Cargo.toml
crates/arborium-ada/: info.toml
crates/arborium-agda/: info.toml
crates/arborium-asciidoc/: info.toml
crates/arborium-asm/: info.toml
crates/arborium-awk/: info.toml
crates/arborium-bash/: info.toml
crates/arborium-batch/: info.toml
crates/arborium-c/: info.toml
crates/arborium-c-sharp/: info.toml
crates/arborium-caddy/: info.toml
crates/arborium-capnp/: info.toml
crates/arborium-clojure/: info.toml
crates/arborium-cmake/: info.toml
crates/arborium-commonlisp/: info.toml
crates/arborium-cpp/: info.toml
crates/arborium-css/: info.toml
crates/arborium-d/: info.toml
crates/arborium-dart/: info.toml
crates/arborium-devicetree/: info.toml
crates/arborium-diff/: info.toml
crates/arborium-dockerfile/: info.toml
crates/arborium-docsrs-demo/: Cargo.toml  README.md  arborium-header.html
crates/arborium-dot/: info.toml
crates/arborium-elisp/: info.toml
crates/arborium-elixir/: info.toml
crates/arborium-elm/: info.toml
crates/arborium-erlang/: info.toml
crates/arborium-fish/: info.toml
crates/arborium-fsharp/: info.toml
crates/arborium-gleam/: info.toml
crates/arborium-glsl/: info.toml
crates/arborium-go/: info.toml
crates/arborium-graphql/: info.toml
crates/arborium-haskell/: info.toml
crates/arborium-hcl/: info.toml
crates/arborium-highlight/: Cargo.toml  README.md
crates/arborium-hlsl/: arborium.kdl  info.toml
crates/arborium-host/: Cargo.stpl.toml  Cargo.toml
crates/arborium-html/: info.toml
crates/arborium-idris/: info.toml
crates/arborium-ini/: info.toml
crates/arborium-java/: info.toml
crates/arborium-javascript/: info.toml
crates/arborium-jinja2/: info.toml
crates/arborium-jq/: info.toml
crates/arborium-json/: info.toml
crates/arborium-julia/: info.toml
crates/arborium-kdl/: info.toml
crates/arborium-kotlin/: info.toml
crates/arborium-lean/: info.toml
crates/arborium-lua/: info.toml
crates/arborium-markdown/: info.toml
crates/arborium-matlab/: info.toml
crates/arborium-meson/: info.toml
crates/arborium-nginx/: info.toml
crates/arborium-ninja/: info.toml
crates/arborium-nix/: info.toml
crates/arborium-objc/: info.toml
crates/arborium-ocaml/: info.toml
crates/arborium-perl/: info.toml
crates/arborium-php/: info.toml
crates/arborium-plugin-runtime/: Cargo.stpl.toml  Cargo.toml
crates/arborium-plugin-runtime/src/: lib.rs
crates/arborium-postscript/: info.toml
crates/arborium-powershell/: info.toml
crates/arborium-prolog/: info.toml
crates/arborium-python/: info.toml
crates/arborium-query/: Cargo.toml  info.toml
crates/arborium-r/: info.toml
crates/arborium-rescript/: info.toml
crates/arborium-ron/: info.toml
crates/arborium-ruby/: info.toml
crates/arborium-rust/: info.toml
crates/arborium-rustdoc/: Cargo.toml
crates/arborium-rustdoc/src/: html.rs  lib.rs  main.rs  processor.rs
crates/arborium-scala/: info.toml
crates/arborium-scheme/: info.toml
crates/arborium-scss/: info.toml
crates/arborium-sparql/: info.toml
crates/arborium-sql/: info.toml
crates/arborium-ssh-config/: info.toml
crates/arborium-starlark/: info.toml
crates/arborium-svelte/: info.toml
crates/arborium-swift/: info.toml
crates/arborium-sysroot/: Cargo.toml
crates/arborium-test-harness/: Cargo.stpl.toml  Cargo.toml
crates/arborium-test-harness/src/: lib.rs
crates/arborium-textproto/: info.toml
crates/arborium-theme/: Cargo.toml  README.md
crates/arborium-thrift/: info.toml
crates/arborium-tlaplus/: info.toml
crates/arborium/src/: highlighter.rs  lib.rs  provider.rs  store.rs  theme.rs
crates/arborium/themes/: ayu-dark.toml  ayu-light.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml  ef-melissa-dark.toml  github-dark.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  kanagawa-dragon.toml  light-owl.toml  lucius-light.toml  melange-dark.toml  melange-light.toml  monokai.toml  nord.toml  one-dark.toml  rose-pine-moon.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
demo/: .icon-cache.json  app.js  iife-demo-local.html  iife-demo.html  index.html  index.stpl.html  plugins.json  registry.json  rustdoc-comparison.html  styles.css  template.html
docs/: theme-system.md
langs/: Cargo.toml  plugins.json
scripts/: dedupe-wasm.py  install-hooks  sync_tree_sitter_fork.py
themes/: alabaster.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  cobalt2.toml  dayfox.toml  desert256.toml  dracula.toml  github-dark.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  kanagawa-dragon.toml  melange-dark.toml  melange-light.toml  monokai-aqua.toml  monokai.toml  nord.toml  one-dark.toml  rose-pine-moon.toml  tokyo-night.toml  zenburn.toml
wasm-sysroot/: limits.h
wit/: host.wit
xtask/: Cargo.toml  README.md
xtask/src/: build.rs  cache.rs  ci.rs  config.rs  deploy_website.rs  generate.rs  lint.rs  lint_new.rs  main.rs  plan.rs  plugins.rs  publish.rs  serve.rs  theme_gen.rs  tool.rs  types.rs  util.rs  version_store.rs
xtask/templates/: app.stpl.js  build.stpl.rs  cargo.stpl.toml  iife-demo.stpl.html  index.stpl.html  lib.stpl.rs  packages_arborium_package.stpl.json  plugin_cargo.stpl.toml  plugin_lib.stpl.rs  plugins_manifest.stpl.ts  rustdoc-comparison.stpl.html  umbrella_lib.stpl.rs  umbrella_store.stpl.rs  validate_grammar.stpl.js
(+209 files in other folders)
