[workspace]
resolver = "3"
members = [
    "crates/arborium",
    "crates/arborium-test-harness",
    "crates/arborium-ada",
    "crates/arborium-agda",
    "crates/arborium-asm",
    "crates/arborium-asciidoc",
    "crates/arborium-asciidoc_inline",
    "crates/arborium-awk",
    "crates/arborium-bash",
    "crates/arborium-batch",
    "crates/arborium-c",
    "crates/arborium-c-sharp",
    "crates/arborium-caddy",
    "crates/arborium-capnp",
    "crates/arborium-clojure",
    "crates/arborium-cmake",
    "crates/arborium-commonlisp",
    "crates/arborium-cpp",
    "crates/arborium-css",
    "crates/arborium-d",
    "crates/arborium-dart",
    "crates/arborium-devicetree",
    "crates/arborium-diff",
    "crates/arborium-dockerfile",
    "crates/arborium-dot",
    "crates/arborium-elisp",
    "crates/arborium-elixir",
    "crates/arborium-elm",
    "crates/arborium-erlang",
    "crates/arborium-fish",
    "crates/arborium-fsharp",
    "crates/arborium-gleam",
    "crates/arborium-glsl",
    "crates/arborium-go",
    "crates/arborium-graphql",
    "crates/arborium-haskell",
    "crates/arborium-hcl",
    "crates/arborium-hlsl",
    "crates/arborium-html",
    "crates/arborium-idris",
    "crates/arborium-ini",
    "crates/arborium-java",
    "crates/arborium-javascript",
    "crates/arborium-jinja2",
    "crates/arborium-jq",
    "crates/arborium-json",
    "crates/arborium-julia",
    "crates/arborium-kdl",
    "crates/arborium-kotlin",
    "crates/arborium-lean",
    "crates/arborium-lua",
    "crates/arborium-markdown",
    "crates/arborium-markdown-inline",
    "crates/arborium-matlab",
    "crates/arborium-meson",
    "crates/arborium-nginx",
    "crates/arborium-ninja",
    "crates/arborium-nix",
    "crates/arborium-objc",
    "crates/arborium-ocaml",
    "crates/arborium-perl",
    "crates/arborium-php",
    "crates/arborium-postscript",
    "crates/arborium-powershell",
    "crates/arborium-prolog",
    "crates/arborium-python",
    "crates/arborium-query",
    "crates/arborium-r",
    "crates/arborium-rescript",
    "crates/arborium-ron",
    "crates/arborium-ruby",
    "crates/arborium-rust",
    "crates/arborium-scala",
    "crates/arborium-scheme",
    "crates/arborium-scss",
    "crates/arborium-sparql",
    "crates/arborium-sql",
    "crates/arborium-ssh-config",
    "crates/arborium-starlark",
    "crates/arborium-svelte",
    "crates/arborium-swift",
    "crates/arborium-textproto",
    "crates/arborium-thrift",
    "crates/arborium-tlaplus",
    "crates/arborium-toml",
    "crates/arborium-tsx",
    "crates/arborium-typescript",
    "crates/arborium-typst",
    "crates/arborium-uiua",
    "crates/arborium-vb",
    "crates/arborium-verilog",
    "crates/arborium-vhdl",
    "crates/arborium-vim",
    "crates/arborium-vue",
    "crates/arborium-x86asm",
    "crates/arborium-xml",
    "crates/arborium-yaml",
    "crates/arborium-yuri",
    "crates/arborium-zig",
    "crates/arborium-zsh",
    "crates/miette-arborium",
    "crates/arborium-wire",
    "crates/arborium-plugin-runtime",
    "demo",
    "tree-sitter",
    "tree-sitter/language",
    "tree-sitter-highlight",
]

# xtask is excluded so it doesn't rebuild when grammar crates change
# Plugin crates are excluded - they must be built with cargo-component
exclude = [
    "xtask",
    "crates/arborium-rust-plugin",
    "crates/arborium-html-plugin",
    "crates/arborium-javascript-plugin",
    "crates/arborium-host",
    "crates/arborium-ada-plugin",
    "crates/arborium-agda-plugin",
    "crates/arborium-asciidoc-plugin",
    "crates/arborium-clojure-plugin",
    "crates/arborium-asciidoc_inline-plugin",
    "crates/arborium-idris-plugin",
    "crates/arborium-dart-plugin",
    "crates/arborium-meson-plugin",
    "crates/arborium-bash-plugin",
    "crates/arborium-ninja-plugin",
    "crates/arborium-python-plugin",
    "crates/arborium-scala-plugin",
    "crates/arborium-c-plugin",
    "crates/arborium-elm-plugin",
    "crates/arborium-fish-plugin",
    "crates/arborium-batch-plugin",
    "crates/arborium-tlaplus-plugin",
    "crates/arborium-fsharp-plugin",
    "crates/arborium-ocaml-plugin",
    "crates/arborium-erlang-plugin",
    "crates/arborium-yuri-plugin",
    "crates/arborium-sparql-plugin",
    "crates/arborium-nginx-plugin",
    "crates/arborium-toml-plugin",
    "crates/arborium-json-plugin",
    "crates/arborium-dot-plugin",
    "crates/arborium-dtd-plugin",
    "crates/arborium-matlab-plugin",
    "crates/arborium-haskell-plugin",
    "crates/arborium-hlsl-plugin",
    "crates/arborium-commonlisp-plugin",
    "crates/arborium-kotlin-plugin",
    "crates/arborium-yaml-plugin",
    "crates/arborium-hcl-plugin",
    "crates/arborium-zig-plugin",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"

# Optimize for size in release builds (especially important for  