[workspace]
members = ["xtask"]
resolver = "3"

# Minimal workspace for now; future generated workspaces
# will live under langs/group-{animal}/.

[workspace.dependencies]
arborium = { path = "crates/arborium", version = "0.2.0" }
arborium-ada = { path = "langs/group-moss/ada/crate", version = "0.2.0" }
arborium-agda = { path = "langs/group-fern/agda/crate", version = "0.2.0" }
arborium-asciidoc = { path = "langs/group-willow/asciidoc/crate", version = "0.2.0" }
arborium-asciidoc_inline = { path = "langs/group-willow/asciidoc_inline/crate", version = "0.2.0" }
arborium-asm = { path = "langs/group-birch/asm/crate", version = "0.2.0" }
arborium-awk = { path = "langs/group-hazel/awk/crate", version = "0.2.0" }
arborium-bash = { path = "langs/group-hazel/bash/crate", version = "0.2.0" }
arborium-batch = { path = "langs/group-hazel/batch/crate", version = "0.2.0" }
arborium-c = { path = "langs/group-birch/c/crate", version = "0.2.0" }
arborium-c-sharp = { path = "langs/group-sage/c-sharp/crate", version = "0.2.0" }
arborium-caddy = { path = "langs/group-maple/caddy/crate", version = "0.2.0" }
arborium-capnp = { path = "langs/group-pine/capnp/crate", version = "0.2.0" }
arborium-clojure = { path = "langs/group-cedar/clojure/crate", version = "0.2.0" }
arborium-cmake = { path = "langs/group-maple/cmake/crate", version = "0.2.0" }
arborium-commonlisp = { path = "langs/group-fern/commonlisp/crate", version = "0.2.0" }
arborium-cpp = { path = "langs/group-birch/cpp/crate", version = "0.2.0" }
arborium-css = { path = "langs/group-acorn/css/crate", version = "0.2.0" }
arborium-d = { path = "langs/group-birch/d/crate", version = "0.2.0" }
arborium-dart = { path = "langs/group-pine/dart/crate", version = "0.2.0" }
arborium-devicetree = { path = "langs/group-pine/devicetree/crate", version = "0.2.0" }
arborium-diff = { path = "langs/group-willow/diff/crate", version = "0.2.0" }
arborium-dockerfile = { path = "langs/group-maple/dockerfile/crate", version = "0.2.0" }
arborium-dot = { path = "langs/group-maple/dot/crate", version = "0.2.0" }
arborium-elisp = { path = "langs/group-sage/elisp/crate", version = "0.2.0" }
arborium-elixir = { path = "langs/group-fern/elixir/crate", version = "0.2.0" }
arborium-elm = { path = "langs/group-fern/elm/crate", version = "0.2.0" }
arborium-erlang = { path = "langs/group-fern/erlang/crate", version = "0.2.0" }
arborium-fish = { path = "langs/group-hazel/fish/crate", version = "0.2.0" }
arborium-fsharp = { path = "langs/group-sage/fsharp/crate", version = "0.2.0" }
arborium-gleam = { path = "langs/group-fern/gleam/crate", version = "0.2.0" }
arborium-glsl = { path = "langs/group-moss/glsl/crate", version = "0.2.0" }
arborium-go = { path = "langs/group-birch/go/crate", version = "0.2.0" }
arborium-graphql = { path = "langs/group-maple/graphql/crate", version = "0.2.0" }
arborium-haskell = { path = "langs/group-fern/haskell/crate", version = "0.2.0" }
arborium-hcl = { path = "langs/group-maple/hcl/crate", version = "0.2.0" }
arborium-hlsl = { path = "langs/group-moss/hlsl/crate", version = "0.2.0" }
arborium-host = { path = "crates/arborium-host", version = "0.2.0" }
arborium-html = { path = "langs/group-acorn/html/crate", version = "0.2.0" }
arborium-idris = { path = "langs/group-fern/idris/crate", version = "0.2.0" }
arborium-ini = { path = "langs/group-maple/ini/crate", version = "0.2.0" }
arborium-java = { path = "langs/group-cedar/java/crate", version = "0.2.0" }
arborium-javascript = { path = "langs/group-acorn/javascript/crate", version = "0.2.0" }
arborium-jinja2 = { path = "langs/group-willow/jinja2/crate", version = "0.2.0" }
arborium-jq = { path = "langs/group-maple/jq/crate", version = "0.2.0" }
arborium-json = { path = "langs/group-acorn/json/crate", version = "0.2.0" }
arborium-julia = { path = "langs/group-moss/julia/crate", version = "0.2.0" }
arborium-kdl = { path = "langs/group-maple/kdl/crate", version = "0.2.0" }
arborium-kotlin = { path = "langs/group-cedar/kotlin/crate", version = "0.2.0" }
arborium-lean = { path = "langs/group-fern/lean/crate", version = "0.2.0" }
arborium-lua = { path = "langs/group-hazel/lua/crate", version = "0.2.0" }
arborium-markdown = { path = "langs/group-willow/markdown/crate", version = "0.2.0" }
arborium-markdown-inline = { path = "langs/group-willow/markdown-inline/crate", version = "0.2.0" }
arborium-matlab = { path = "langs/group-moss/matlab/crate", version = "0.2.0" }
arborium-meson = { path = "langs/group-maple/meson/crate", version = "0.2.0" }
arborium-nginx = { path = "langs/group-maple/nginx/crate", version = "0.2.0" }
arborium-ninja = { path = "langs/group-maple/ninja/crate", version = "0.2.0" }
arborium-nix = { path = "langs/group-maple/nix/crate", version = "0.2.0" }
arborium-objc = { path = "langs/group-birch/objc/crate", version = "0.2.0" }
arborium-ocaml = { path = "langs/group-fern/ocaml/crate", version = "0.2.0" }
arborium-perl = { path = "langs/group-hazel/perl/crate", version = "0.2.0" }
arborium-php = { path = "langs/group-hazel/php/crate", version = "0.2.0" }
arborium-plugin-runtime = { path = "crates/arborium-plugin-runtime", version = "0.2.0" }
arborium-postscript = { path = "langs/group-sage/postscript/crate", version = "0.2.0" }
arborium-powershell = { path = "langs/group-hazel/powershell/crate", version = "0.2.0" }
arborium-prolog = { path = "langs/group-moss/prolog/crate", version = "0.2.0" }
arborium-python = { path = "langs/group-hazel/python/crate", version = "0.2.0" }
arborium-query = { path = "langs/group-maple/query/crate", version = "0.2.0" }
arborium-r = { path = "langs/group-moss/r/crate", version = "0.2.0" }
arborium-rescript = { path = "langs/group-pine/rescript/crate", version = "0.2.0" }
arborium-ron = { path = "langs/group-maple/ron/crate", version = "0.2.0" }
arborium-ruby = { path = "langs/group-hazel/ruby/crate", version = "0.2.0" }
arborium-rust = { path = "langs/group-birch/rust/crate", version = "0.2.0" }
arborium-scala = { path = "langs/group-cedar/scala/crate", version = "0.2.0" }
arborium-scheme = { path = "langs/group-fern/scheme/crate", version = "0.2.0" }
arborium-scss = { path = "langs/group-acorn/scss/crate", version = "0.2.0" }
arborium-sparql = { path = "langs/group-moss/sparql/crate", version = "0.2.0" }
arborium-sql = { path = "langs/group-maple/sql/crate", version = "0.2.0" }
arborium-ssh-config = { path = "langs/group-maple/ssh-config/crate", version = "0.2.0" }
arborium-starlark = { path = "langs/group-pine/starlark/crate", version = "0.2.0" }
arborium-svelte = { path = "langs/group-willow/svelte/crate", version = "0.2.0" }
arborium-swift = { path = "langs/group-pine/swift/crate", version = "0.2.0" }
arborium-textproto = { path = "langs/group-pine/textproto/crate", version = "0.2.0" }
arborium-theme = { path = "crates/arborium-theme", version = "0.2.0" }
arborium-thrift = { path = "langs/group-pine/thrift/crate", version = "0.2.0" }
arborium-tlaplus = { path = "langs/group-moss/tlaplus/crate", version = "0.2.0" }
arborium-toml = { path = "langs/group-maple/toml/crate", version = "0.2.0" }
arborium-tsx = { path = "langs/group-acorn/tsx/crate", version = "0.2.0" }
arborium-typescript = { path = "langs/group-acorn/typescript/crate", version = "0.2.0" }
arborium-typst = { path = "langs/group-willow/typst/crate", version = "0.2.0" }
arborium-uiua = { path = "langs/group-pine/uiua/crate", version = "0.2.0" }
arborium-vb = { path = "langs/group-sage/vb/crate", version = "0.2.0" }
arborium-verilog = { path = "langs/group-moss/verilog/crate", version = "0.2.0" }
arborium-vhdl = { path = "langs/group-moss/vhdl/crate", version = "0.2.0" }
arborium-vim = { path = "langs/group-sage/vim/crate", version = "0.2.0" }
arborium-vue = { path = "langs/group-willow/vue/crate", version = "0.2.0" }
arborium-wire = { path = "crates/arborium-wire", version = "0.2.0" }
arborium-x86asm = { path = "langs/group-birch/x86asm/crate", version = "0.2.0" }
arborium-xml = { path = "langs/group-acorn/xml/crate", version = "0.2.0" }
arborium-yaml = { path = "langs/group-maple/yaml/crate", version = "0.2.0" }
arborium-yuri = { path = "langs/group-pine/yuri/crate", version = "0.2.0" }
arborium-zig = { path = "langs/group-birch/zig/crate", version = "0.2.0" }
arborium-zsh = { path = "langs/group-hazel/zsh/crate", version = "0.2.0" }

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"
