[package]
publish = false
name = "arborium-plugin-runtime"
version = "1.0.5"
edition = "2024"
description = "Runtime library for arborium grammar plugins"
license = "MIT"
repository = "https://github.com/bearcove/arborium"

[features]
default = []

[dependencies]
arborium-tree-sitter = { version = "1.0.5", path = "../arborium-tree-sitter" }
arborium-wire = { path = "../arborium-wire" }

[dev-dependencies]
arborium-rust = { path = "../arborium-rust" }
