[package]
name = "arborium-test-harness"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bearcove/arborium"
description = "Test harness for arborium grammar crates"

[dependencies]
tree-sitter-patched-arborium = { version = "0.25.10", path = "../../tree-sitter" }
tree-sitter-highlight-patched-arborium = { version = "0.25.10", path = "../../tree-sitter-highlight" }
