[package]
name = "arborium"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"
description = "Tree-sitter syntax highlighting with HTML rendering and WASM support"
keywords = ["tree-sitter", "syntax-highlighting", "wasm"]
categories = ["parsing", "text-processing", "wasm"]
links = "arborium"

[features]
default = []

# All languages
all-languages = [
    "lang-commonlisp",
]

# Individual language features
lang-commonlisp = ["dep:arborium-commonlisp"]

[dependencies]
tree-sitter-patched-arborium = { path = "../../tree-sitter" }
tree-sitter-highlight-patched-arborium = { path = "../../tree-sitter-highlight" }
arborium-theme = { path = "../arborium-theme" }
arborium-highlight = { path = "../arborium-highlight", features = ["tree-sitter"] }

# Optional grammar dependencies
arborium-commonlisp = { path = "../../langs/group-fern/commonlisp/crate", optional = true }

[dev-dependencies]
indoc = "2"

# WASM allocator (automatically enabled on wasm targets)
[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = "0.2"
